# esp32s3_blinko

NimBLE_GATT_Server_copy/: .gitignore_test  CMakeLists.txt  NimBLE_GATT_Server.code-workspace  README.md  SEQUENTIAL_COMBO_IMPLEMENTATION.md  format_sd_card.ps1  init_flash_audio.ps1  partitions.csv  raw_to_wav_converter.py  rebuild.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old  verify_flash_image.ps1
NimBLE_GATT_Server_copy/audio/: README.txt
NimBLE_GATT_Server_copy/docs/: B11通信协议--简化.docx  ESP32-ASRREO_protocol  FLASH_AUDIO_DEPLOYMENT.md  FLASH_IMAGE_IMPLEMENTATION.md  FLASH_QUICK_REFERENCE.md  GPIO Expander.md  NFC_STORAGE_GUIDE.md  NFC_STORAGE_IMPLEMENTATION.md
NimBLE_GATT_Server_copy/flash_image/: README.md
NimBLE_GATT_Server_copy/host/: B11_Protocol.md  BLE_OTA_README.md  GATT_NOTIFICATION_GUIDE.md  audio_section_adpcm.md  ble_audio_recorder_8khz.py  ble_file_explorer.py  ble_flash_audio_uploader.py  ble_flash_manager.py  ble_log_read.py  ble_log_simple.py  ble_log_stream.py  ble_log_test.py  ble_log_viewer.py  ble_ota_tester.py  ble_scan_all.py  ble_scanner.py  ble_self_test.py  check_services.py  gatt_notification_monitor.py  nfc_ble_manager.py  ota_test_simple.py  requirements.txt  test_fs_browse.py  test_sequential_combo.py  test_simple_upload.py  test_upload.py  trigger_selftest_ble.py  trigger_selftest_ble_v2.py
NimBLE_GATT_Server_copy/main/: CMakeLists.txt  audio_test_example.c  main.c  pet_main.c  pet_main_simple.c  test_simple.c
NimBLE_GATT_Server_copy/main/include/: adpcm.h  audio.h  common.h  fs_service.h  log_collector.h  nfc_card.h  nfc_storage.h  pet_config.h  self_test.h  self_test_trigger.h  version.h
NimBLE_GATT_Server_copy/main/include/app/: action_executor.h  action_table.h  emotion_manager.h  pet_config.h  trigger_detector.h
NimBLE_GATT_Server_copy/main/include/ble/: ble_ota.h
NimBLE_GATT_Server_copy/main/include/drivers/: aw9535.h  aw9535_pinmap.h  charger.h  custom_i2s_writer.h  flash_storage.h  gatt_svc.h  hardware_interface.h  heart_rate_sensor.h  i2s_audio.h  indatachange.h  led_driver.h  max98357a.h  motor_test.h  nfc_card.h  nfc_storage.h  playback_recorder_test.h  playback_test.h  sd_card.h  touch_ttp223.h  vibrator.h  voice_recognition.h
NimBLE_GATT_Server_copy/main/src/: adpcm.c  audio.c  fs_service.c  log_collector.c  nfc_storage.c  pet_config.c  self_test.c  self_test_trigger.c  version.c
NimBLE_GATT_Server_copy/main/src/app/: action_executor.c  action_table.c  emotion_manager.c  pet_config.c  trigger_detector.c  trigger_detector_example.c
NimBLE_GATT_Server_copy/main/src/ble/: ble_ota.c
NimBLE_GATT_Server_copy/main/src/drivers/: audio_player.c  audio_player.c.backup  audio_player_pipeline.c  aw9535.c  aw9535_example.c  aw9535_pinmap.c  charger.c  custom_i2s_writer.c  cw6116.c  flash_storage.c  gap.c  gatt_svc.c  hardware_interface.c  heart_rate_sensor.c  i2s_audio.c  indatachange.c  led_driver.c  led_enhanced.c  max98357a.c  microphone.c  motor.c  motor_test.c  pir_sensor.c  playback_recorder_test.c  playback_test.c  sd_card.c  servo_motor.c  touch_sensor.c  vibrator.c  voice_recognition.c
NimBLE_GATT_Server_copy/test/: b11_auto_test.py  emotion_system_test.py
